@@ -1,8 +1,10 @@
-PYTHON27_PREFIX=/usr
-PYTHON27_HEADERS=$(PYTHON27_PREFIX)/include/python2.7
-PYTHON27_LIBS=$(PYTHON27_PREFIX)/lib
+PYTHON27_HEADERS=$(shell python2.7-config --includes)
+PYTHON27_LIBS=$(shell python2.7-config --libs)
 
-XED_PREFIX=pin-2.14-71313-gcc.4.4.7-linux/extras/xed-ia32
+XED_PREFIX=pin-2.14/extras/xed-ia32
+# XED_PREFIX=pin-2.14-71313-clang.5.1-mac/extras/xed-ia32
+# XED_PREFIX=pin-2.14-71313-clang.5.1-mac/extras/xed-intel64
+# XED_PREFIX=pin-2.14-71313-gcc.4.4.7-linux/extras/xed-ia32
 # XED_PREFIX=pin-2.14-71313-gcc.4.4.7-linux/extras/xed-intel64
 XED_HEADERS=$(XED_PREFIX)/include
 XED_LIBS=$(XED_PREFIX)/lib
@@ -14,8 +16,8 @@ W=-Wall -Wextra \
     -Wno-old-style-declaration \
     -Wno-strict-aliasing
 
-CFLAGS=-fPIC -O2 -I$(PYTHON27_HEADERS) -I$(XED_HEADERS) $(W) -ggdb
-LDFLAGS=-L$(PYTHON27_LIBS) -lpython2.7 -L$(XED_LIBS) -lxed -shared
+CFLAGS=-fPIC -O2 $(PYTHON27_HEADERS) -I$(XED_HEADERS) $(W) -ggdb
+LDFLAGS=$(PYTHON27_LIBS) -lpython2.7 -L$(XED_LIBS) -lxed -shared
 
 OBJS=check.o rflags.o operand.o instruction.o decoder.o encoder.o pyxed.o
 BIN=pyxed.so
@@ -32,3 +34,4 @@ clean: pyc
 .PHONY: pyc
 pyc:
 	rm -fr *.pyc
+
