@@ -16,10 +16,8 @@ PDB=pyxed.pdb
 CFLAGS=/nologo /W3 /O2 /GS /Zi /I $(PYTHON27_HEADERS) /I $(XED_HEADERS) /MT
 
 
-# You can build 64bit binary using "/MACHINE:X64" below.
 LDFLAGS=/nologo /DEBUG /DYNAMICBASE /NXCOMPAT /PDB:$(PDB) \
-    /SAFESEH /WX /MACHINE:X86 /DLL \
-    /LIBPATH:$(PYTHON27_LIBS) /LIBPATH:$(XED_LIBS) \
+    /WX /DLL /LIBPATH:$(PYTHON27_LIBS) /LIBPATH:$(XED_LIBS) \
     /DEFAULTLIB:python27.lib /DEFAULTLIB:libxed.lib
 
 
