@@ -1,4 +1,4 @@
-# Python bindings for Intel's XED2
+# Python bindings for Intel's XED
 
 huku &lt;[huku@grhack.net](mailto:huku@grhack.net)&gt;
 
@@ -7,28 +7,49 @@ huku &lt;[huku@grhack.net](mailto:huku@grhack.net)&gt;
 
 ## About
 
-**pyxed** is a Python extension that uses Intel's XED2 library to decode x86
+**pyxed** is a Python extension that uses Intel's XED library to decode x86
 instructions. It is designed to be a wrapper around XED's C API and, as such,
 it doesn't provide any high level abstractions.
 
 
 ## Compiling pyxed
 
-### Unixoids
+**pyxed** comes with Makefiles for the most widely used platforms, namely
+Microsoft Windows, MacOS X and Linux. All Makefiles require that you edit them
+and set **XED_PREFIX** appropriately.
 
-To compile **pyxed**, set appropriate paths for **PYTHON27_PREFIX** and
-**XED_PREFIX** in the accompanying makefile and then run **make**.
+
+### Linux
+
+Compiling on Linux requires GCC to be installed (chances are it is). Just open a
+terminal, enter **pyxed**'s top-level directory and run **make**.
+
+
+### MacOS X
+
+Compiling on MacOS X requires the XCode command line utilities to be installed.
+Just open a terminal, enter **pyxed**'s top-level directory and run **make**.
 
 
 ### Microsoft Windows
 
 Compiling on Microsoft Windows requires Visual Studio to be installed. Just open
-a console, enter **pyxed**'s toplevel directory and run the following commands:
+a console, enter **pyxed**'s top-level directory and set **PYTHON27_PREFIX** in
+**Makefile** to the location where Python is installed on your system. Then, run
+the following commands to build a 32-bit binary:
 
 ```
 C:\pyxed> "C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\vcvarsall.bat"
 C:\pyxed> nmake /F Makefile.nmake
 ```
+
+Or the following to build a 64-bit binary:
+
+```
+C:\pyxed> "C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\vcvarsall.bat" amd64
+C:\pyxed> nmake /F Makefile.nmake
+```
+
 
 ### Compiling for use with IDAPython
 
@@ -39,18 +60,19 @@ For example, on my MacOS X system, **IDAPython** runs on Python 2.6.x:
 
 ```
 Python>sys.version
-2.6.7 (r267:88850, Oct 11 2012, 20:15:00) 
+2.6.7 (r267:88850, Oct 11 2012, 20:15:00)
 [GCC 4.2.1 Compatible Apple Clang 4.0 (tags/Apple/clang-418.0.60)]
 ```
 
-To make **pyxed** work correctly I had to replace **-lpython2.7** with
-**-lpython2.6** in **Makefile**.
+To make **pyxed** work correctly I had to replace **python2.7-config** with
+**python2.6-config** in **Makefile**.
 
 
 ### Precompiled binaries
 
-Windows users can use an experimental precompiled 32-bit release of pyxed which
-can be downloaded from [here](https://www.grhack.net/pyxed-x86.zip).
+Experimental precompiled binaries for Microsoft Windows can be downloaded from
+[here](https://www.grhack.net/pyxed.tgz). The tarball includes both a 32-bit and
+a 64-bit release of **pyxed**.
 
 Debian packages are also planned for the near future.
 
@@ -60,5 +82,5 @@ Debian packages are also planned for the near future.
 For information on how to use **pyxed**, have a look at **examples/**.
 
 If your compiler throws a warning, if you happen to hit a bug, or if you have
-any comments/suggestions please let me know.
+any comments or suggestions please let me know.
 
